css/style.css
html, body, ul, li, .site-header h1, .site-header p {
    padding: 0;
    margin: 0;
}

body {
    background: #fff url(../img/pixel22.jpg) no-repeat;
    font: 1em/1.5 'Open Sans', Arial, sans-serif;
    background-attachment: fixed;
    background-size: cover;
    color: #222;
}

.content {
    max-width: 940px;
    padding: 0 20px;
    margin: 0 auto;
}

html, body {
    height: 100%;
}

.site-header {
    padding: 1em 0;
    background: rgba(255, 255, 255, 0.95);
    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
}

.site-header h1{
    display: inline-block;
}

.site-header img {
    width: 120px;
    height: 40px;
    display: block;
}

.site-nav {
    display: inline-block;
    float: right;
    padding: 5px 0;
}

.site-navlist {
    list-style: none;
}

.site-nav a{
    color: #fff;
    text-decoration: none;
    background-color: #4e4e4e;
    padding: 5px 15px;
    border-radius: 3px
}

.site-navlist > li > a:hover,
.site-navlist > li > a:focus,
.comment-count:hover, .comment-count:focus {
    background-color: #FF5A00;
    color: rgba(255, 255, 255, .9);
}

/*.site-navlist > li {
    margin: 20px 0 20px 28px;
}

.site-navlist > li > a {
    width: 60px;
    height: 60px;
    border-radius: 30px;
    background-color: #4e4e4e;
    color: rgba(255, 255, 255, .9);
    display: table-cell;
    vertical-align: middle;
    text-align: center;
    text-decoration: none;
    font: normal 11px/1.1 Arial, sans-serif;
    text-transform: uppercase;
    letter-spacing: .1em;
    transition: all 1s ease;
}

.site-navlist > li > a:hover,
.site-navlist > li > a:focus {
    background-color: #FF5A00;
    color: rgba(255, 255, 255, .9);
}*/

.section-opensource {
    background: rgba(22, 22, 22, 0.4);
}

.section-opensource,
.section-twitter {
    position: relative;
    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
}

.section-opensource > header,
.section-twitter > header {
    background-size: 2px 2px;
    padding: 3em 0;
    color: #fff;
    text-shadow: 1px 1px 0 #444;
    background: rgba(53, 53, 53, 0.5)
}

.section-opensource section {
    background: rgba(232, 247, 253, 0.79);
    padding: 2em 0;
}

.section-twitter section {
    background-color: rgba(255, 255, 255, 0.89);
    padding: 2em 0;
}

.section-title {
    margin: 0;

}

.repos-section {
    display: -webkit-flex;
    -webkit-flex-wrap: wrap;
    display: flex;
    flex-wrap: wrap;
}

.repos-box {
    margin: 0 10px;
    -webkit-flex: 1 1 200px;
    flex: 1 1 200px;
    border-radius: 5px;
}

.repos-box li {
    background: #444;
    color: #fff;
    margin: 15px 0;
    padding: 10px;
    border-radius: 0.3em;
}

.repos-box li a {
    color: inherit;
}

.repos-box > h3 {
    font: 800 18px/1.1 Arial, sans-serif;
    padding: 0 2em 0 0;
    color: #292f33;
    margin: 0;
    padding: 1em 0 0;
}

.repos-box > ul {
    list-style: none;
}

.repo-box {
    position: relative;
}

.repo-box > header {
    max-width: 200px;
}

.repo-box > header:after {
    content: '';
    clear: both;
    display: table;
}

.repo-box h4 {
    margin: 0;
    float: left;
    line-height: 1.4;
}

.repo-box a {
    color: #9B3600;
    text-decoration: none;
}

.repo-box a:hover,
.repo-box a:focus {
    text-decoration: underline;
}

.star-gazers {
    margin: 0;
    float: right;
}

.star-gazers span {
    font-size: 22px;
    color: #ed3800;
    text-shadow: 1px 1px 0 rgba(255, 255, 255, 0.8);
}

.repo-description {
    font-size: 12px;
}

.site-footer {
    background: #222;
    padding: 1em 0;
}

.site-footer, .site-footer a {
    color: #fff;
    text-decoration: none;
}

.site-footer li {
    list-style: none;
    display: inline-block;
    font-size: 90%;
}

.site-footer li + li:before {
    content: ' • ';
    color: #aaa;
}

.github-icon-svg,
.twitter-icon-svg {
    display: inline-block;
    width: 16px;
    height: 16px;
    position: relative;
    top: 3px;
}





/*========= Blog =====*/



.github-icon-svg,
.twitter-icon-svg {
  display: inline-block;
  width: 16px;
  height: 16px;
  position: relative;
  top: 3px;
}



/* Home styles */
/* ----------------------------------------------------------*/

.home h1 { margin-bottom: 25px; }

.posts { list-style-type: none; }

.posts li { margin-bottom: 30px; }


.section-posts{
    background: rgba(255,255,255,0.9);
}
.posts .post-link {
  font-weight: bold;
  color: inherit;
}

.posts .post-date {
  display: block;
  color: #818181;
}


/* Post styles */
/* ----------------------------------------------------------*/

.post-content{
    background: #fff;
    padding: 2em 0;
}

.post-meta{
    margin: 0;
    font-size: 0.85em;
}

.author{
    background: rgba(232, 247, 253, 0.79);
    padding: 2em 0 1em;
    overflow: hidden;
    font-size: 0.9em;
}

.author a{
    text-decoration: none;
    color: #222;
    font-size: 0.9em;
}

.author h3{
    margin: 0 15px 0 0;
    display: inline-block;
}
.author img{
    float: left;
    width: 100px;
    height: 100px;
    background: rgba(255,255, 255, 0.9);
    box-shadow: 1px 1px 2px #bbb;
    padding: 5px;
    border-radius: 50%;
    margin: 0 15px 0 0;
}

.author li{
    list-style: none;
}

.comments{
    background: rgba(255,255,255,0.95);
    padding: 2em 0;
}
.comment-count{
      background-color: #4e4e4e;
    border-radius: 3px;
    color: #fff;
    font-size: 70%;
    padding: 2px 7px;
    text-decoration: none;
}

.post-header {
      background: rgba(53, 53, 53, 0.5);
      padding: 3em 0;
      color: #ccc;
 }

.post-header h1 {
  font-size: 42px;
  line-height: 1.2;
  font-weight: 300;
    color: #fff;
    text-shadow: 1px 1px 0 #444;
    margin: 0;
    padding: 0 0 0.5em;
}

.post-header *{
    color: inherit;
}

.post-header .meta {
  font-size: 15px;
  color: #818181;
  margin-top: 5px;
}




.post-content h1,
.post-content h2,
.post-content h3,
.post-content h4,
.post-content h5,
.post-content h6 {
  line-height: 1;
  font-weight: 300;
  margin: 40px 0 20px;
}

.post-content h2 {
  font-size: 32px;
  letter-spacing: -1.25px;
}

.post-content h3 {
  font-size: 26px;
  letter-spacing: -1px;
}

.post-content h4 {
  font-size: 20px;
  letter-spacing: -1px;
}

.post-content blockquote {
  border-left: 4px solid #e8e8e8;
  padding-left: 20px;
  font-size: 18px;
  opacity: .6;
  letter-spacing: -1px;
  font-style: italic;
  margin: 30px 0;
}

.post-content ul,
.post-content ol { padding-left: 20px; }

.post pre,
.post code {
  border: 1px solid #d5d5e9;
  background-color: #eef;
  padding: 8px 12px;
  -webkit-border-radius: 3px;
  -moz-border-radius: 3px;
  border-radius: 3px;
  font-size: 15px;
  overflow:auto;
}

.post code { padding: 1px 5px; }

.post ul,
.post ol { margin-left: 1.35em; }

.post pre code {
  border: 0;
  padding-right: 0;
  padding-left: 0;
}

/* terminal */
.post pre.terminal {
  border: 1px solid #000;
  background-color: #333;
  color: #FFF;
  -webkit-border-radius: 3px;
  -moz-border-radius: 3px;
  border-radius: 3px;
}

.post pre.terminal code { background-color: #333; }

/* Syntax highlighting styles */
/* ----------------------------------------------------------*/

.highlight  { background: #ffffff; }
.highlight .c { color: #999988; font-style: italic } /* Comment */
.highlight .err { color: #a61717; background-color: #e3d2d2 } /* Error */
.highlight .k { font-weight: bold } /* Keyword */
.highlight .o { font-weight: bold } /* Operator */
.highlight .cm { color: #999988; font-style: italic } /* Comment.Multiline */
.highlight .cp { color: #999999; font-weight: bold } /* Comment.Preproc */
.highlight .c1 { color: #999988; font-style: italic } /* Comment.Single */
.highlight .cs { color: #999999; font-weight: bold; font-style: italic } /* Comment.Special */
.highlight .gd { color: #000000; background-color: #ffdddd } /* Generic.Deleted */
.highlight .gd .x { color: #000000; background-color: #ffaaaa } /* Generic.Deleted.Specific */
.highlight .ge { font-style: italic } /* Generic.Emph */
.highlight .gr { color: #aa0000 } /* Generic.Error */
.highlight .gh { color: #999999 } /* Generic.Heading */
.highlight .gi { color: #000000; background-color: #ddffdd } /* Generic.Inserted */
.highlight .gi .x { color: #000000; background-color: #aaffaa } /* Generic.Inserted.Specific */
.highlight .go { color: #888888 } /* Generic.Output */
.highlight .gp { color: #555555 } /* Generic.Prompt */
.highlight .gs { font-weight: bold } /* Generic.Strong */
.highlight .gu { color: #aaaaaa } /* Generic.Subheading */
.highlight .gt { color: #aa0000 } /* Generic.Traceback */
.highlight .kc { font-weight: bold } /* Keyword.Constant */
.highlight .kd { font-weight: bold } /* Keyword.Declaration */
.highlight .kp { font-weight: bold } /* Keyword.Pseudo */
.highlight .kr { font-weight: bold } /* Keyword.Reserved */
.highlight .kt { color: #445588; font-weight: bold } /* Keyword.Type */
.highlight .m { color: #009999 } /* Literal.Number */
.highlight .s { color: #d14 } /* Literal.String */
.highlight .na { color: #008080 } /* Name.Attribute */
.highlight .nb { color: #0086B3 } /* Name.Builtin */
.highlight .nc { color: #445588; font-weight: bold } /* Name.Class */
.highlight .no { color: #008080 } /* Name.Constant */
.highlight .ni { color: #800080 } /* Name.Entity */
.highlight .ne { color: #990000; font-weight: bold } /* Name.Exception */
.highlight .nf { color: #990000; font-weight: bold } /* Name.Function */
.highlight .nn { color: #555555 } /* Name.Namespace */
.highlight .nt { color: #000080 } /* Name.Tag */
.highlight .nv { color: #008080 } /* Name.Variable */
.highlight .ow { font-weight: bold } /* Operator.Word */
.highlight .w { color: #bbbbbb } /* Text.Whitespace */
.highlight .mf { color: #009999 } /* Literal.Number.Float */
.highlight .mh { color: #009999 } /* Literal.Number.Hex */
.highlight .mi { color: #009999 } /* Literal.Number.Integer */
.highlight .mo { color: #009999 } /* Literal.Number.Oct */
.highlight .sb { color: #d14 } /* Literal.String.Backtick */
.highlight .sc { color: #d14 } /* Literal.String.Char */
.highlight .sd { color: #d14 } /* Literal.String.Doc */
.highlight .s2 { color: #d14 } /* Literal.String.Double */
.highlight .se { color: #d14 } /* Literal.String.Escape */
.highlight .sh { color: #d14 } /* Literal.String.Heredoc */
.highlight .si { color: #d14 } /* Literal.String.Interpol */
.highlight .sx { color: #d14 } /* Literal.String.Other */
.highlight .sr { color: #009926 } /* Literal.String.Regex */
.highlight .s1 { color: #d14 } /* Literal.String.Single */
.highlight .ss { color: #990073 } /* Literal.String.Symbol */
.highlight .bp { color: #999999 } /* Name.Builtin.Pseudo */
.highlight .vc { color: #008080 } /* Name.Variable.Class */
.highlight .vg { color: #008080 } /* Name.Variable.Global */
.highlight .vi { color: #008080 } /* Name.Variable.Instance */
.highlight .il { color: #009999 } /* Literal.Number.Integer.Long */

